# lim2v

./: .gitignore  README.md  drift_study.py  eval_lim2v.py  eval_pyserini.py  eval_sbert.py  pyproject.toml  pyrightconfig.json
lim2v/: eval.py
scripts/: msmarco.sh
