[project]
name = "lim2v"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Bowdon",email = "cbowdon@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserini (>=0.44.0,<0.45.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytrec-eval (>=0.5,<0.6)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "model2vec (>=0.4.1,<0.5.0)",
    "polars (>=1.26.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
pyright = "^1.1.398"

